--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,19 +2,22 @@
 <section id="banner">
 	<div class="content">
 		<header>
-			<h1>중고 거래 서비스<br />
-				by 효민현수</h1>
+			<h1>중고 거래 서비스</h1>
 			<h5>"사람들이 보다 더 쉽고 편리하게 중고물품을 거래할 수 있게하자!"</h5><br>
 		</header>
 		
+		<a href="https://likelion.net/">#중고나라 같은 곳</a>
+		<a href="https://likelion.net/">#어디 없을까?</a><br>
+		<a href="https://likelion.net/">#중고거래 하는 곳</a>
+		<a href="https://likelion.net/">#어디 없을까?</a><br>
 		<a href="https://likelion.net/">#멋쟁이사자처럼</a>
 		<a href="https://likelion.net/">#중고거래</a>
-		<a href="https://likelion.net/">#해커톤</a>
-		<p><a href="https://www.facebook.com/likelionKangnam/?fref=ts">#강남대학교 5기</a></p>
+		<a href="https://likelion.net/">#해커톤</a><br>
+		<p><a href="https://www.facebook.com/likelionKangnam/?fref=ts">#강남대학교 5기 스무디팀 제작</a></p>
 
 
 		<ul class="actions">
-			<li><a href="#" class="button big">Learn More</a></li>
+			<li><a href="#" class="button big">더 알아보기</a></li>
 		</ul>
 	</div>
 				
@@ -34,28 +37,28 @@
 			<span class="icon fa-diamond"></span>
 			<div class="content">
 				<h3>루비 온 레일즈 </h3>
-				<p> 이 웹페이지는 동적 객체 지향 스크립트 프로그래밍 언어인 Ruby On Rails 기반으로 제작이 되었습니다.</p>
+				<p> 이 홈페이지는 동적 객체 지향 스크립트 프로그래밍 언어인 <Strong>Ruby On Rails</Strong> 기반으로 제작이 되었습니다.</p>
 			</div>
 		</article>
 		<article>
 			<span class="icon fa-paper-plane"></span>
 			<div class="content">
 				<h3>편리한 서비스</h3>
-				<p>쓰는 중</p>
+				<p>보기 쉬운 카테고리, 심플화 된 디자인으로 이용하기 쉬운 서비스 등으로 초심자에게도 이용하기 쉬운 홈페이지로 <strong>최적화</strong> 되어있습니다.</p>
 			</div>
 		</article>
 		<article>
 			<span class="icon fa-rocket"></span>
 			<div class="content">
 				<h3>유비쿼터스 서비스</h3>
-				<p>쓰는 중</p>
+				<p><strong>어디서나 존재하는</strong> 을 의미하는 유비쿼터스(Ubiquitous)처럼 전국 어디에서 손쉽게 접속하고, 이용할 수 있습니다. </p>
 			</div>
 		</article>
 		<article>
 			<span class="icon fa-signal"></span>
 			<div class="content">
-				<h3>트렌드에 맞춰가는 서비스</h3>
-				<p>쓰는 중</p>
+				<h3>맞춰가는 서비스</h3>
+				<p>이 홈페이지는 제작자 중심이 아닌 <strong>사용자에게</strong> 포커스를 맞춰 개발되었으며, 계속하여 업데이트 중입니다.</p>
 			</div>
 		</article>
 	</div>
@@ -69,7 +72,7 @@
 	<div class="posts">
 		<article>
 			<a href="#" class="image"><%= image_tag "pic01.jpg" %></a>
-			<h3>Interdum aenean</h3>
+			<h3>첫 번째 게시물</h3>
 			<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 					
 			<ul class="actions">
@@ -78,7 +81,7 @@
 		</article>
 		<article>
 			<a href="#" class="image"><%= image_tag "pic02.jpg" %></a>
-			<h3>Nulla amet dolore</h3>
+			<h3>두 번째 게시물</h3>
 			<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 						
 			<ul class="actions">
@@ -87,7 +90,7 @@
 		</article>
 		<article>
 			<a href="#" class="image"><%= image_tag "pic03.jpg" %></a>
-			<h3>Tempus ullamcorper</h3>
+			<h3>세 번째 게시물</h3>
 			<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 						
 			<ul class="actions">
@@ -96,7 +99,7 @@
 		</article>
 		<article>
 			<a href="#" class="image"><%= image_tag "pic04.jpg" %></a>
-			<h3>Sed etiam facilis</h3>
+			<h3>네 번째 게시물</h3>
 			<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											
 			<ul class="actions">
@@ -105,7 +108,7 @@
 		</article>
 		<article>
 			<a href="#" class="image"><%= image_tag "pic05.jpg" %></a>
-			<h3>Feugiat lorem aenean</h3>
+			<h3>다섯 번째 게시물</h3>
 			<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											
 			<ul class="actions">
@@ -114,7 +117,7 @@
 		</article>
 		<article>
 			<a href="#" class="image"><%= image_tag "pic06.jpg" %></a>
-			<h3>Amet varius aliquam</h3>
+			<h3>여섯 번째 게시물</h3>
 			<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 						
 			<ul class="actions">
@@ -123,4 +126,5 @@
 		</article>
 	</div>
 </section>
+	
 	
